// Vitest Snapshot v1

exports[`Bitmap 类 > 创建 > 传入 base64 URL 后 可正常生成 Sketch JSON 1`] = `
{
  "_class": "bitmap",
  "booleanOperation": -1,
  "clippingMask": "",
  "clippingMaskMode": 0,
  "do_objectID": "9A1BECFE-EA20-478B-9E5C-1665F3DE8B58",
  "exportOptions": {
    "_class": "exportOptions",
    "exportFormats": [],
    "includedLayerIds": [],
    "layerOptions": 0,
    "shouldTrim": false,
  },
  "fillReplacesImage": false,
  "frame": {
    "_class": "rect",
    "constrainProportions": false,
    "height": 100,
    "width": 100,
    "x": 0,
    "y": 0,
  },
  "hasClippingMask": false,
  "image": {
    "_class": "MSJSONOriginalDataReference",
    "_ref": "images/B867C5C4-612F-46F5-862A-E8562C7E0152",
    "_ref_class": "MSImageData",
    "data": {
      "_data": "iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mM8w8DwHwAEOQHNmnaaOAAAAABJRU5ErkJggg==",
    },
    "sha1": {
      "_data": "",
    },
  },
  "intendedDPI": 32,
  "isFixedToViewport": false,
  "isFlippedHorizontal": false,
  "isFlippedVertical": false,
  "isLocked": false,
  "isTemplate": false,
  "isVisible": true,
  "layerListExpandedType": 0,
  "name": "bitmap",
  "nameIsFixed": false,
  "resizingConstraint": 63,
  "resizingType": 0,
  "rotation": 0,
  "shouldBreakMaskChain": false,
  "style": {
    "_class": "style",
    "borderOptions": {
      "_class": "borderOptions",
      "dashPattern": [],
      "isEnabled": true,
      "lineCapStyle": 0,
      "lineJoinStyle": 0,
    },
    "borders": [],
    "colorControls": {
      "_class": "colorControls",
      "brightness": 0,
      "contrast": 1,
      "hue": 0,
      "isEnabled": false,
      "saturation": 1,
    },
    "contextSettings": {
      "_class": "graphicsContextSettings",
      "blendMode": 0,
      "opacity": 1,
    },
    "do_objectID": "A87F7CBE-CAD7-4529-A877-6A5187FE8BDB",
    "endMarkerType": 0,
    "fills": [],
    "innerShadows": [],
    "miterLimit": 10,
    "shadows": [],
    "startMarkerType": 0,
    "windingRule": 1,
  },
}
`;

exports[`Bitmap 类 创建 传入 base64 URL 后 可正常生成 Sketch JSON 1`] = `
Object {
  "_class": "bitmap",
  "booleanOperation": -1,
  "clippingMask": "",
  "clippingMaskMode": 0,
  "do_objectID": "UUID",
  "exportOptions": Object {
    "_class": "exportOptions",
    "exportFormats": Array [],
    "includedLayerIds": Array [],
    "layerOptions": 0,
    "shouldTrim": false,
  },
  "fillReplacesImage": false,
  "frame": Object {
    "_class": "rect",
    "constrainProportions": false,
    "height": 100,
    "width": 100,
    "x": 0,
    "y": 0,
  },
  "hasClippingMask": false,
  "image": Object {
    "_class": "MSJSONOriginalDataReference",
    "_ref": "images/UUID",
    "_ref_class": "MSImageData",
    "data": Object {
      "_data": "iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mM8w8DwHwAEOQHNmnaaOAAAAABJRU5ErkJggg==",
    },
    "sha1": Object {
      "_data": "",
    },
  },
  "intendedDPI": 32,
  "isFixedToViewport": false,
  "isFlippedHorizontal": false,
  "isFlippedVertical": false,
  "isLocked": false,
  "isVisible": true,
  "layerListExpandedType": 0,
  "name": "bitmap",
  "nameIsFixed": false,
  "resizingConstraint": 63,
  "resizingType": 0,
  "rotation": 0,
  "shouldBreakMaskChain": false,
  "style": Object {
    "_class": "style",
    "borderOptions": Object {
      "_class": "borderOptions",
      "dashPattern": Array [],
      "isEnabled": true,
      "lineCapStyle": 0,
      "lineJoinStyle": 0,
    },
    "borders": Array [],
    "colorControls": Object {
      "_class": "colorControls",
      "brightness": 0,
      "contrast": 1,
      "hue": 0,
      "isEnabled": false,
      "saturation": 1,
    },
    "contextSettings": Object {
      "_class": "graphicsContextSettings",
      "blendMode": 0,
      "opacity": 1,
    },
    "do_objectID": "UUID",
    "endMarkerType": 0,
    "fills": Array [],
    "innerShadows": Array [],
    "miterLimit": 10,
    "shadows": Array [],
    "startMarkerType": 0,
    "windingRule": 1,
  },
}
`;
